# flashmark

./: Cargo.toml  README.md
delimiter_macro_derive/: Cargo.toml
delimiter_macro_derive/src/: lib.rs
examples/: markdown.rs  math.rs  template.rs  template2.rs
src/: lib.rs  parsing.rs  slides.rs
src/markdown/: delimiter.rs  math.rs  mod.rs
src/markdown/math/: block.rs  inline.rs  mod.rs
src/markdown_it/: math.rs
src/math/: mod.rs
src/math/parse/: expressions.rs  mod.rs  sanitize.rs
src/math/parse/tokenize/: mod.rs  token.rs
src/template/: environment.rs  evaluate.rs  mod.rs  parse.rs  render.rs
src/template/parse/: directive.rs  mod.rs
src/template2/: environment.rs  mod.rs  parse.rs
src/template2/parse/: directive.rs  mod.rs
tests/: template.rs
