[package]
name = "flashmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delimiter_macro_derive = { path = "./delimiter_macro_derive" }
indoc = "2.0.3"
markdown-it = "0.6.0"
rhai = { version = "1.15.1", features = ["internals"] }
rhai-rand = "0.1.5"
thiserror = "1.0.48"
